# ghc

./: .arclint  .gitmodules  aclocal.m4  ghc.mk  packages
compiler/: ghc.cabal.in
compiler/basicTypes/: Module.hs
compiler/deSugar/: Desugar.hs  DsExpr.hs  DsMonad.hs  Match.hs  MatchCon.hs  MatchLit.hs
compiler/hiefile/: HieAst.hs  HieBin.hs  HieDebug.hs  HieTypes.hs  HieUtils.hs
compiler/hsSyn/: Convert.hs  HsTypes.hs
compiler/iface/: IfaceSyn.hs  LoadIface.hs  MkIface.hs  TcIface.hs  TcIface.hs-boot
compiler/main/: DriverPipeline.hs  DynFlags.hs  Finder.hs  GHC.hs  GhcMake.hs  HscMain.hs  HscTypes.hs  TidyPgm.hs
compiler/parser/: Lexer.x  Parser.y  RdrHsSyn.hs
compiler/prelude/: TysPrim.hs  TysWiredIn.hs  primops.txt.pp
compiler/rename/: RnEnv.hs
compiler/simplStg/StgLiftLams/: Transformation.hs
compiler/typecheck/: TcEnv.hs  TcRnDriver.hs  TcRnMonad.hs  TcRnTypes.hs  TcSplice.hs
compiler/types/: TyCon.hs
docs/users_guide/: 8.8.1-notes.rst
hadrian/cfg/: system.config.in
hadrian/src/: Context.hs  Packages.hs
hadrian/src/Oracles/: Setting.hs
hadrian/src/Rules/: BinaryDist.hs  SourceDist.hs
hadrian/src/Settings/: Default.hs  Packages.hs
libraries/base/Data/: Bitraversable.hs
libraries/base/GHC/: Base.hs  Read.hs  Real.hs
libraries/ghc-prim/cbits/: pdep.c  pext.c
libraries/ghci/: ghci.cabal.in
libraries/ghci/GHCi/: Message.hs  TH.hs
libraries/integer/: integer.cabal
libraries/integer-simple/GHC/: Integer.hs
libraries/integer/GHC/: Integer.hsig  Natural.hsig
utils/genprimopcode/: Main.hs  Parser.y
(+22 files in other folders)
